# Pathtracer

./: CMakeLists.txt  README.md
src/core/: camera.h  common.h  geometry.h  image.h  main.cpp  material.h  ray.h  renderOptions.h  scene.h  texture.h  vec.h
